--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   photo_view: ^0.15.0
   carousel_slider: ^5.0.0
   table_calendar: ^3.1.3
-  share_plus: ^10.1.4
+  share_plus: ^7.2.2
   flutter_slidable: ^3.1.2
   sliding_up_panel: ^2.0.0+1
   flutter_html: ^3.0.0-alpha.5
@@ -58,7 +58,7 @@ dependencies:
   flutter_facebook_auth: ^7.1.1
   permission_handler: ^11.3.1
   file_picker: ^6.1.1
-  image_gallery_saver: '^1.5.0'
+  # image_gallery_saver: '^1.2.2'
 
 
 
@@ -72,6 +72,16 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+
+  flutter_launcher_icons: ^0.14.3
+
+flutter_icons:
+  android: true
+  ios: true
+  remove_alpha_ios: true
+  image_path: "assets/icon.png"
+  
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
