--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Smart Guide Mobile</string>
+	<string>Marine Plus</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -57,5 +57,22 @@
 	<string>เพื่อแสดงตำแหน่งปัจจุบันของคุณ และแนะนำจุดน่าสนใจให้กับคุณ</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>เพื่อแสดงตำแหน่งปัจจุบันของคุณ และแนะนำจุดน่าสนใจให้กับคุณ</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+	<dict>
+		<key>CFBundleTypeRole</key>
+		<string>Editor</string>
+		<key>CFBundleURLSchemes</key>
+		<array>
+		<!-- Specify URL scheme to use when returning from LINE to your app. -->
+		<string>line3rdp.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+		</array>
+	</dict>
+	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<!-- Specify URL scheme to use when launching LINE from your app. -->
+		<string>lineauth2</string>
+	</array>
 </dict>
 </plist>
