--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 0.0.1+6
+version: 0.0.1+8
 
 environment:
   sdk: ^3.5.3
@@ -32,6 +32,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   dio: ^5.7.0
   url_launcher: ^6.3.1
+  firebase_core: ^3.12.1
   flutter_datetime_picker: ^1.5.1
   flutter_datetime_picker_plus: ^2.1.0
   pull_to_refresh: ^2.0.0
@@ -49,7 +50,7 @@ dependencies:
   flutter_slidable: ^3.1.2
   sliding_up_panel: ^2.0.0+1
   flutter_html: ^3.0.0-alpha.5
-  flutter_line_sdk: ^2.5.1
+  flutter_line_sdk: ^2.4.3
   google_sign_in: ^6.2.2
   qr_flutter: ^4.0.0
   image_picker: ^1.1.2
