--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,50 +29,43 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  # date_format: ^2.0.9 #remove
+  carousel_slider: ^5.0.0
+  dio: ^5.8.0+1
+  firebase_auth: ^5.3.4 #downgrade from 5.4.1
+  firebase_core: ^3.10.1
+  # flutter_datetime_picker: ^1.5.1 #remove
+  flutter_datetime_picker_plus: ^2.0.0 #downgrade from 2.1.0
+  flutter_facebook_auth: ^7.1.1
+  flutter_html: ^3.0.0-beta.2 #downgrade from 3.0.0-alpha.5
+  flutter_line_sdk: ^2.4.3
   flutter_secure_storage: ^9.2.4
-  dio: ^5.7.0
-  url_launcher: ^6.3.1
-  firebase_core: ^3.12.1
-  flutter_datetime_picker: ^1.5.1
-  flutter_datetime_picker_plus: ^2.1.0
-  pull_to_refresh: ^2.0.0
+  flutter_slidable: ^3.0.0 #downgrade from 3.1.2
+  fluttertoast: ^8.2.4 #downgrade from 8.2.5
+  # file_picker: ^5.3.2 #downgrade from 6.1.1
   geocoding: ^3.0.0
   geolocator: ^13.0.2
-  google_maps_flutter: ^2.10.0
-  date_format: ^2.0.9
-  intl: ^0.19.0
-  fluttertoast: ^8.2.5
-  http: ^1.2.2
-  photo_view: ^0.15.0
-  carousel_slider: ^5.0.0
-  table_calendar: ^3.1.3
-  share_plus: ^7.2.2
-  flutter_slidable: ^3.1.2
-  sliding_up_panel: ^2.0.0+1
-  flutter_html: ^3.0.0-alpha.5
-  flutter_line_sdk: ^2.4.3
+  google_maps_flutter: ^2.0.0 #downgrade from 2.10.0
   google_sign_in: ^6.2.2
-  qr_flutter: ^4.0.0
+  http: ^1.3.0 #upgrade from 1.2.2
   image_picker: ^1.1.2
-  firebase_auth: ^5.4.1
-  sign_in_with_apple: ^6.1.4
-  flutter_facebook_auth: ^7.1.1
+  intl: ^0.20.2 #upgrade from 0.19.0
   permission_handler: ^11.3.1
-  file_picker: ^6.1.1
-  # image_gallery_saver: '^1.2.2'
+  photo_view: ^0.15.0
+  pull_to_refresh: ^2.0.0
+  qr_flutter: ^4.0.0
+  share_plus: ^7.2.2
+  sign_in_with_apple: ^6.1.4
+  sliding_up_panel: ^2.0.0+1
+  table_calendar: ^3.0.3 #downgrade from 3.1.3
+  url_launcher: ^6.1.5 #downgrade from 6.3.1
+ 
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-  flutter_lints: ^4.0.0
 
   flutter_launcher_icons: ^0.14.3
 
